tests/paczka1/fuzzy1/67478436.err
Error in line 7: kjZ1 S675 61,1
Error in line 10: kjZ1 A292 88,7
Error in line 14: UL1QY A711 89,5
Error in line 18: UL1QY S315 45,3
Error in line 26: UL1QY S675 32,7
